kubernetes-debug/kit/networkpolicy/networkpolicy-ok.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: netperf-calico-policy
  labels:
spec:
  order: 10
  selector: app == "netperf-operator"
  ingress:
  - action: Allow
    source:
      selector: netperf-type == "client"
  - action: Allow
    source:
      selector: netperf-type == "server"
  - action: Log
  - action: Deny
  egress:
  - action: Allow
    destination:
      selector: netperf-type == "client"
  - action: Allow
    destination:
      selector: netperf-type == "server"
  - action: Log
  - action: Deny
